# MannKS_dev

./: .gitignore  APP_AUDIT.md  AUDIT_ENGINEERING_SAFETY.md  AUDIT_FINDINGS.md  AUDIT_INDEPENDENT_V060.md  AUDIT_REPORT.md  AUDIT_ROLLING_TREND.md  AUDIT_SEGMENTED.md  AUDIT_V060.md  AUDIT_V060_ADVERSARIAL.md  AUDIT_V060_EXTRA.md  AUDIT_V060_FINAL.md  AUDIT_V060_FINDINGS.md  AUDIT_V060_FINDINGS_UPDATE.md  AUDIT_V060_RESULTS.md  Audit-Jules.md  Audit.md  Audit_Report.md  CHANGELOG.md  ENVIRONMENT_SETUP.md  README.md  SETUP_NOTES.txt  SUBMISSION_NOTES.md  bootstrap.md  debug_issue.py  debug_segmented.py  dev-requirements.txt  diagnosis_report.md  future_ATS.md  install_r_packages.R  install_r_pkgs.R  issue.md  memory_recording.txt  pyproject.toml  reproduce_aggregation.py  requirements.txt  statistical_notes.md  temp-requirements.txt  temp_requirements.txt  test_results.txt  (+13 more)
Examples/: README.md  examples_plan.md
MannKS/: __init__.py  _ats.py  _autocorr.py  _bootstrap.py  _bootstrap.py.bak  _check_data.py  _datetime.py  _helpers.py  _hybrid.py  _large_dataset.py  _scout.py  _segmented.py  _stats.py  _surrogate.py  analysis_notes.py  check_seasonality.py  classification.py  plotting.py  power.py  rolling_trend.py  seasonal_trend_test.py  segmented_trend_test.py  trend_test.py
MannKenSen/: __init__.py  _ats.py  _datetime.py  _helpers.py  _stats.py  _utils.py  analysis_notes.py  check_seasonality.py  classification.py  inspection.py  original_test.py  plotting.py  preprocessing.py  regional_test.py  seasonal_test.py  seasonal_trend_test.py  seasonality_test.py  trend_test.py
(+610 files in other folders)
